- made validator java 1.8 friendly